fix: change `overflow-hidden` to `overflow-x-hidden`

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 @import url('https://rsms.me/inter/inter.css');
 
 body {
-  @apply font-sans overflow-hidden w-full;
+  @apply font-sans overflow-x-hidden w-full;
 }
 .button {
   @apply bg-primary px-4 py-2 rounded text-btn-text;
